# embassy-size-benchmark

./: Cargo.toml  README.md
.cargo/: config
src/: cortex.rs  main.rs
